--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -1,3 +1,58 @@
 body{
-    background-color: red;
+    background-color:#343434;
+}
+
+h2 {
+    font-family: 'Poppins', sans-serif;
+    color: white;
+}
+
+h3{
+    font-family: 'Roboto', sans-serif;
+    color: white;
+}
+
+.navegador {
+    color: white;
+}
+
+nav{
+    text-align: center;
+}
+.title{
+    background-color: rgba(0, 0, 0, 0.3);
+    align-content: center;
+    color: white;
+    font-weight: bolder;
+    padding: 25px;
+    box-shadow: inset 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    margin: 0%;
+    box-shadow: 0 6px 20px 0 rgba(0,0,0, 0.6);
+    padding-top: 130px;
+}
+
+header{
+    background-color: rgb(17, 214, 17);
+    box-shadow: inset 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    padding-left: 25px;
+    width: 100%;
+    position:fixed;
+}
+
+tr{
+    width: 100%;
+}
+
+body{
+    font-family: 'Open Sans', sans-serif;
+    font-family: 'Raleway', sans-serif;
+    font-family: 'Roboto', sans-serif;
+    font-family: 'Work Sans', sans-serif;
+    margin: 0%;
+}
+
+.tabla1{
+    padding: 15px;
+    width: 100%;
+
 }
