--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -1,5 +1,34 @@
+*{
+    box-sizing: border-box;
+    text-decoration: none;
+}
+
+header{
+    background-color: #5028f0;
+    box-shadow: inset 0 4px 8px 0 rgba(0, 0, 0, 0.4), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    padding: 10px;
+    width: 100vw;
+    position: fixed;
+    margin: 0px, 0px, 15px, 0px;
+}
+
+.menu{
+    font-family: 'Poppins', sans-serif;
+    color: white;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    flex-wrap: nowrap;
+}
+
+.navegador {
+    color: white;
+    font-family: 'Poppins', sans-serif;
+}
+
 body{
-    background-color:#343434;
+    background-color: #262626;
+    margin: 0px;
 }
 
 h2 {
@@ -12,47 +41,22 @@ h3{
     color: white;
 }
 
-.navegador {
-    color: white;
-}
-
-nav{
-    text-align: center;
-}
-.title{
-    background-color: rgba(0, 0, 0, 0.3);
-    align-content: center;
-    color: white;
-    font-weight: bolder;
-    padding: 25px;
-    box-shadow: inset 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-    margin: 0%;
-    box-shadow: 0 6px 20px 0 rgba(0,0,0, 0.6);
-    padding-top: 130px;
-}
-
-header{
-    background-color: rgb(17, 214, 17);
-    box-shadow: inset 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-    padding-left: 25px;
-    width: 100%;
-    position:fixed;
-}
-
-tr{
-    width: 100%;
-}
-
-body{
-    font-family: 'Open Sans', sans-serif;
-    font-family: 'Raleway', sans-serif;
+p{
     font-family: 'Roboto', sans-serif;
-    font-family: 'Work Sans', sans-serif;
-    margin: 0%;
+    color: white;
 }
 
-.tabla1{
-    padding: 15px;
-    width: 100%;
+main{
+    padding: 14vh 3vw 5vh 3vw;
+}
 
+footer{
+    display: flex;
+    justify-content: center;
+    background-color: #5028f0;
+    font-weight: bold;
+    padding: 5px;
+    margin: 0px;
+    box-shadow: inset 0 4px 8px 0 rgba(0, 0, 0, 0.4), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    box-shadow: 0px -1px 24px 0px rgba(0,0,0,0.2);
 }
