--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -31,6 +31,11 @@ body{
     margin: 0px;
 }
 
+.cinepedia {
+    font-family: 'Poppins', sans-serif;
+    color: white;
+}
+
 h2 {
     font-family: 'Poppins', sans-serif;
     color: white;
