--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -46,6 +46,12 @@ h3{
     color: white;
 }
 
+h4{
+    font-family: 'Roboto', sans-serif;
+    color: white;
+    font-weight: bolder;
+}
+
 p{
     font-family: 'Roboto', sans-serif;
     color: white;
@@ -64,4 +70,35 @@ footer{
     margin: 0px;
     box-shadow: inset 0 4px 8px 0 rgba(0, 0, 0, 0.4), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
     box-shadow: 0px -1px 24px 0px rgba(0,0,0,0.2);
+}
+
+.fotos{
+    height: 330px;
+    width: 220px;
+    box-shadow: 0px 0px 6px 2px rgba(0,0,0,0.5);
+    -webkit-box-shadow: 0px 0px 6px 2px rgba(0,0,0,0.5);
+    -moz-box-shadow: 0px 0px 6px 2px rgba(0,0,0,0.5);}
+
+.seccion{
+    margin-bottom: 40px;
+}
+
+.portada{
+    display: flex;
+    justify-content: left;
+}
+
+.pelicula{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: left;
+    margin-right: 5px;
+    width: 240px;
+    line-height: 0px;
+    flex-wrap: wrap;
+}
+
+.categoria{
+    margin-top: 40px;
 }
