--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -77,7 +77,13 @@ footer{
     width: 220px;
     box-shadow: 0px 0px 6px 2px rgba(0,0,0,0.5);
     -webkit-box-shadow: 0px 0px 6px 2px rgba(0,0,0,0.5);
-    -moz-box-shadow: 0px 0px 6px 2px rgba(0,0,0,0.5);}
+    -moz-box-shadow: 0px 0px 6px 2px rgba(0,0,0,0.5);
+    transition: transform 300ms ease-out;
+}
+
+.fotos:hover {
+    transform: translate(0px, 0px) scale(1.02, 1.02);
+}
 
 .seccion{
     margin-bottom: 40px;
