--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -127,3 +127,10 @@ footer{
     text-align: justify;
     align-self: flex-start;
 }
+.titfav{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+    padding-right: 22px;
+}
