--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -30,6 +30,8 @@ header{
 body{
     background-color: #262626;
     margin: 0px;
+    display: flex;
+    flex-direction: column;
 }
 
 .cinepedia {
@@ -53,21 +55,30 @@ p{
     color: white;
 }
 
-main{
-    padding: 14vh 3vw 5vh 3vw;
+.main_home{
+    padding: 14vh 3vw 0vh 3vw;
     margin: auto;
-    height: 100vh;
+}
+
+.main_detalles{
+    padding: 20vh 3vw 0vh 3vw;
+    margin: auto;
+    height: 90vh;
 }
 
 footer{
     display: flex;
     justify-content: center;
+    justify-self: flex-end;
     background-color: #5028f0;
     font-weight: bold;
     padding: 5px;
-    margin: 0px;
+    margin-top: 15px;
     box-shadow: inset 0 4px 8px 0 rgba(0, 0, 0, 0.4), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
     box-shadow: 0px -1px 24px 0px rgba(0,0,0,0.2);
+    position:sticky;
+    width: 100%;
+
 }
 
 .fotos{
@@ -144,7 +155,6 @@ footer{
 }
 .buscar{
     font-family: 'Poppins', sans-serif;
-    color: white;
     background-color: rgba(255, 255, 255, 0.333);
     -webkit-border-radius: 50px;
     -moz-border-radius: 50px;
