--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -169,6 +169,7 @@ footer{
 }
 .buscar{
     font-family: 'Poppins', sans-serif;
+    color: white;
     background-color: rgba(255, 255, 255, 0.333);
     -webkit-border-radius: 50px;
     -moz-border-radius: 50px;
