prueba cambio nombres carpetas

--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -243,6 +243,7 @@ button:hover {
 @media(max-width:450px){
     .pelicula{
         flex-wrap: wrap;
+        width:100%
     }
     .portada{
         flex-wrap: wrap;
