--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -7,7 +7,7 @@ header{
     background-color: #5028f0;
     box-shadow: inset 0 4px 8px 0 rgba(0, 0, 0, 0.4), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
     padding: 10px;
-    width: 100%;
+    width: 100vw;
     position: fixed;
     margin: 0px, 0px, 15px, 0px;
     z-index: 1;
@@ -88,6 +88,19 @@ footer{
     width: 100%;
 
 }
+.footer_genero{
+    display: flex;
+    justify-content: center;
+    background-color: #5028f0;
+    font-weight: bold;
+    padding: 5px;
+    margin-top: 15px;
+    box-shadow: inset 0 4px 8px 0 rgba(0, 0, 0, 0.4), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    box-shadow: 0px -1px 24px 0px rgba(0,0,0,0.2);
+    position:sticky;
+    width: 100%;
+    align-items: flex-end;
+}
 
 .fotos{
     height: 330px;
@@ -114,6 +127,7 @@ footer{
 .portada{
     display: flex;
     justify-content: left;
+    flex-wrap: wrap;
 }
 
 .pelicula{
@@ -125,6 +139,7 @@ footer{
     width: 240px;
     line-height: 0px;
     flex-wrap: nowrap;
+    padding-top: 20px;
 }
 
 .categoria{
@@ -179,7 +194,7 @@ footer{
 }
 
 .genres_botones{
-    height: 90vh;
+    height: 100vh;
     width: 100%;
     padding-top: 10vh;
     margin: auto;
@@ -232,19 +247,43 @@ button:hover {
     margin-right: 10px;
 }
 
-@media(max-width:900px){
+
+@media(max-width:420px){
     .menu{
-        flex-wrap: nowrap;        
+        flex-direction: column;
+        padding: 3px;
     }
-
-
-}
-
-@media(max-width:450px){
+    .main_home{
+        padding-top: 25vh;
+    }
+    .genres_botones{
+        padding-top: 75vh;
+    }
+    .fotos{
+      width: 170px;
+      height: 280px;  
+    }
     .pelicula{
-        flex-wrap: wrap;
+        width: 190px;
     }
-    .portada{
-        flex-wrap: wrap;
+    footer{
+        font-size: small;
     }
+    .footer_genero{
+        margin-top: 40px;
+    }
+    .botones{
+        justify-content: flex-end;
+    }
+    .botones_pelis{
+        margin-top: 40px;
+    }
+    header{
+        margin-bottom: 0;
+    }
+    .main_detalles{
+        height: 100%;
+        padding-top: 270px;
+    }
+
 }
