--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -251,7 +251,7 @@ button:hover {
 @media(max-width:420px){
     .menu{
         flex-direction: column;
-        padding: 3px;
+        padding: 5px;
     }
     .main_home{
         padding-top: 35vh;
@@ -289,6 +289,7 @@ button:hover {
     .dtl_pelicula{
         width: min-content;
         display: flex;
+        flex-direction: column;
         flex-wrap: wrap;
     }
     .sct_detail{
