--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -9,7 +9,7 @@ header{
     padding: 10px;
     width: 100vw;
     position: fixed;
-    margin: 0px, 0px, 15px, 0px;
+    top: 0px;
     z-index: 1;
 }
 
@@ -33,6 +33,8 @@ body{
     display: flex;
     flex-direction: column;
     width: 100%;
+    padding-top: 13vh;
+    padding-bottom: 10vh;
 }
 
 .cinepedia {
@@ -65,26 +67,25 @@ p{
 }
 
 .main_home{
-    padding: 12vh 3vw 0vh 3vw;
     margin: auto;
 }
 
 .main_detalles{
-    padding: 20vh 3vw 0vh 3vw;
     margin: auto;
-    height: 90vh;
+    padding-top: 5vh;
 }
 
 footer{
     display: flex;
     justify-content: center;
+    align-items: center;
     background-color: #5028f0;
     font-weight: bold;
     padding: 5px;
-    margin-top: 15px;
     box-shadow: inset 0 4px 8px 0 rgba(0, 0, 0, 0.4), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
     box-shadow: 0px -1px 24px 0px rgba(0,0,0,0.2);
-    position:sticky;
+    position:fixed;
+    bottom: 0;
     width: 100%;
 
 }
@@ -146,6 +147,9 @@ footer{
     margin-top: 40px;
 }
 .dtl_pelicula{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
     margin-right: 15px;
     width: 100%;
     margin: auto;
@@ -154,8 +158,7 @@ footer{
     display: flex;
     flex-direction: row;
     align-items: center;
-    justify-content: left;
-    width: 100%;
+    width: 95vw;
 }
 .trailer{
     margin: 10px;
@@ -194,10 +197,10 @@ footer{
 }
 
 .genres_botones{
-    height: 100vh;
-    width: 100%;
-    padding-top: 10vh;
-    margin: auto;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding-top: 5vh;
 }
 
 button {
@@ -226,40 +229,56 @@ button:hover {
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    height: 100%;
-    width: 100%;
+    padding-top: 5vh;
 }
 
 .botones_series{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
     padding: 10px;
 }
 
 .botones_pelis{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
     margin-bottom: 30px;
     padding: 10px;
 }
 
-.div_boton{
+.divboton{
     display: flex;
     flex-direction: row;
     justify-content: space-around;
     align-items: center;
-    margin-right: 10px;
+    justify-content: center;
+    margin:auto;
 }
 
+.fa-heart{
+    font-size: medium;
+}
+
+.fa-heart:hover {
+    transform: translate(0px, 0px) scale(1.2, 1.2);
+}
 
 @media(max-width:420px){
     .menu{
         flex-direction: column;
-        padding: 5px;
+        font-size: smaller;
+        height: 30vh;
+        width: 95vw;
     }
-    .main_home{
-        padding-top: 35vh;
-        margin-top: 50px;
+
+    body{
+        padding-top: 30vh;
+        padding-bottom: 7vh;
     }
-    .genres_botones{
-        padding-top: 75vh;
-    }
+
     .fotos{
       width: 170px;
       height: 280px;  
@@ -268,38 +287,33 @@ button:hover {
         width: 190px;
     }
     footer{
-        font-size: small;
+        font-size: smaller;
+        height: 7vh;
     }
-    .footer_genero{
-        margin-top: 40px;
-    }
-    .botones{
-        justify-content: flex-end;
-    }
-    .botones_pelis{
-        margin-top: 40px;
+    .menu_detalles{
+        width: 95vw;
     }
     header{
         margin-bottom: 0;
     }
     .main_detalles{
-        padding-top: 270px;
-        width: 100vw;
+        width: 95vw;
+        padding-bottom: 3vh;
     }
     .dtl_pelicula{
-        width: min-content;
         display: flex;
         flex-direction: column;
         flex-wrap: wrap;
+        padding-top: 0;
     }
     .sct_detail{
-        width: 100vw;
+        width: 95vw;
     }
     
     .info{
         display: flex;
         flex-wrap: wrap;
-        width: 100vw;
+        width: 95vw;
     }
     .fotos_dtl{
         width: 150px;
@@ -308,7 +322,7 @@ button:hover {
     .sinopsis{
         order: 2;
         font-size: small;
-        width: 50%;
+        width: 45%;
         margin-left: 15px;
     }
     .trailer{
@@ -319,5 +333,13 @@ button:hover {
 
     .seccion1 {
         padding : 20px;
+    }
+
+    .genres_botones{
+        padding-top: 0;
+    }
+
+    .divboton{
+        flex-direction: column;
     }
 }
